--- a/tagChatFront/src/app/main-chat/main-chat.component.html
+++ b/tagChatFront/src/app/main-chat/main-chat.component.html
@@ -7,17 +7,18 @@
     <title>Tag Chat</title>
 </head>
 <body class="bg-gray-100 h-screen flex justify-center items-center">
-    <div class="bg-white rounded-lg shadow-md p-6 w-full sm:w-96">
+    <div class="bg-white rounded-lg shadow-md p-6 w-full sm:w-96 md:w-160 lg:w-240 xl:w-320">
         <h1 class="text-2xl font-semibold mb-4">Tag Chat</h1>
 
         <div class="mb-4">
             <label for="username" class="block text-sm font-medium text-gray-700">User Name</label>
             <input [(ngModel)]="username" type="text" placeholder="Here" class="flex-1 mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
         </div>
-
-        <div #scrollMe class="h-60 overflow-y-auto border border-gray-300 rounded-md mb-4 p-2">
-          <div *ngFor="let message of messages" class="whitespace-normal">
-              <strong>{{ message.name }}:</strong> {{ message.message }}
+        <div class="mb-2 text-red-600" *ngIf="errorMessage">{{ errorMessage }}</div>
+        <div #scrollMe class="h-60 overflow-y-auto border border-gray-300 rounded-md mb-4 p-2 whitespace-pre-line">
+          <div *ngFor="let message of messages" class="wrapBreak">
+              <strong>{{ message.name }}:</strong>
+              {{ message.message }}
           </div>
       </div>
 
