--- a/tagChatFront/src/app/main-chat/main-chat.component.html
+++ b/tagChatFront/src/app/main-chat/main-chat.component.html
@@ -1,60 +1,51 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet"> -->
-    <title>Tag Chat</title>
-  </head>
-  <body class="bg-gray-100 h-screen flex justify-center items-center">
-    <div
-      class="bg-white rounded-lg shadow-md p-6 w-full sm:w-96 md:w-160 lg:w-240 xl:w-320"
-    >
-      <h1 class="text-2xl font-semibold mb-4">Tag Chat</h1>
+<body class="bg-gray-100 h-screen flex justify-center items-center">
+  <div class="tagPanel flex flex-col justify-end mr-2">
+    <app-tag-panel></app-tag-panel>
+  </div>
+  <div class="bg-white rounded-lg shadow-md p-6 w-full sm:w-96 md:w-160 lg:w-240 xl:w-320">
+    <h1 class="text-2xl font-semibold mb-4">Tag Chat</h1>
 
-      <div class="mb-4">
-        <label for="username" class="block text-sm font-medium text-gray-700"
-          >User Name</label
-        >
-        <input
-          [(ngModel)]="username"
-          type="text"
-          placeholder="Here"
-          maxlength="15"
-          class="flex-1 mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md"
-        />
-      </div>
-      <div class="mb-2 text-red-600" *ngIf="errorMessage">
-        {{ errorMessage }}
-      </div>
-      <div
-        #scrollMe
-        class="h-60 overflow-y-auto border border-gray-300 rounded-md mb-4 p-2 whitespace-pre-line"
-      >
+    <!-- Add the tag panel component here -->
+
+
+    <div class="mb-4">
+      <label for="username" class="block text-sm font-medium text-gray-700">User Name</label>
+      <input
+        [(ngModel)]="username"
+        type="text"
+        placeholder="Here"
+        maxlength="15"
+        class="flex-1 mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md"
+      />
+    </div>
+
+    <div
+      #scrollMe
+      class="h-60 overflow-y-auto border border-gray-300 rounded-md mb-4 p-2 whitespace-pre-line"
+    >
       <div class="loadingSpinner flex justify-center items-center" *ngIf="isLoading">
         <app-loading-spinner></app-loading-spinner>
       </div>
-        <div *ngFor="let message of messages" class="wrapBreak">
-          <strong>{{ message.name }}:</strong>
-          {{ message.message }}
-        </div>
-      </div>
-
-      <div class="flex">
-        <input
-          [(ngModel)]="newMessage"
-          maxlength="200"
-          type="text"
-          placeholder="Type a message..."
-          class="flex-1 mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md"
-        />
-        <button
-          (click)="sendMessage()"
-          class="ml-2 px-4 py-2 bg-indigo-600 text-white rounded-md hover:bg-indigo-700 focus:outline-none focus:ring focus:ring-indigo-200"
-        >
-          Send
-        </button>
+      <div *ngFor="let message of messages" class="wrapBreak" [ngClass]="{'hidden': !messageHasMatchingTags(message)}">
+        <strong>{{ message.name }}:</strong>
+        {{ message.message }}
       </div>
     </div>
-  </body>
-</html>
+
+    <div class="flex">
+      <input
+        [(ngModel)]="newMessage"
+        maxlength="200"
+        type="text"
+        placeholder="Type a message..."
+        class="flex-1 mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md"
+      />
+      <button
+        (click)="sendMessage()"
+        class="ml-2 px-4 py-2 bg-indigo-600 text-white rounded-md hover:bg-indigo-700 focus:outline-none focus:ring focus:ring-indigo-200"
+      >
+        Send
+      </button>
+    </div>
+  </div>
+</body>
