tag filter implemented. With bug: non can see all

--- a/tagChatFront/src/app/main-chat/main-chat.component.html
+++ b/tagChatFront/src/app/main-chat/main-chat.component.html
@@ -29,6 +29,9 @@
       <div *ngFor="let message of messages" class="wrapBreak" [ngClass]="{'hidden': !messageHasMatchingTags(message)}">
         <strong>{{ message.name }}:</strong>
         {{ message.message }}
+        <span *ngIf="message.tags && message.tags.length > 0" class="ml-2 text-gray-600">
+          Tags: {{ message.tags.join(', ') }}
+        </span>
       </div>
     </div>
 
