changed github link

--- a/tagChatFront/src/app/main-chat/main-chat.component.html
+++ b/tagChatFront/src/app/main-chat/main-chat.component.html
@@ -1,5 +1,5 @@
 <div class="credentials font-lato flex justify-end pr-10 font-bold bg-gradient-to-r from-indigo-500 via-purple-500 to-blue-950">
-  <a class="mr-2 text-indigo-200" href="https://github.com/abrorm3/FakeUserDataGenerator" target="_blank">GitHub</a>
+  <a class="mr-2 text-indigo-200" href="https://github.com/abrorm3/tagChat" target="_blank">GitHub</a>
   <a class="text-blue-500" href="https://www.linkedin.com/in/abror-mukhammadiev-a74b9a205/" target="_blank">LinkedIn</a>
 </div>
 
